--- a/box-styles.css
+++ b/box-styles.css
@@ -2,6 +2,35 @@ h1, p {
     background-color: #DDE0E3;    /* Light gray */
   }
   
+h1{
+  padding: 50px;
+  border-bottom: 1px solid gold;
+}
+
   em, strong {
     background-color: #B2D6FF;    /* Light blue */
+  }
+
+  p {
+    padding: 20px 0 20px 10px;
+    margin-bottom: 50px;          /* Add this */
+  }
+
+  strong {
+    margin: 50px;
+  }
+
+  .button {
+    color: #FFF;
+    background-color: #5995DA;
+    font-weight: bold;
+    padding: 20px;
+    text-align: center;
+    border: 2px solid #5D6063;
+    border-radius: 5px;
+    width: 200px;
+    box-sizing: content-box;
+    
+    margin: 20px auto; /* Vertical  Horizontal */
+
   }
